@@ -1,3 +1,4 @@
+17 September 2025: Use double value to limit positions count in SignalExecutor
 16 September 2025: Fix StrategyExecutor to only trade markets available at given time
 30 August 2025: Remove lambda from StrategyExecutor logging
 23 August 2025: Add Downside drawdown calculator
